scripts/deployment/social/cilium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: cilium-ingress
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-thrift
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nginx-thrift
            port:
              number: 8080
        path: /wrk2-api
        pathType: Prefix
